// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerCode shallow renders correctly 1`] = `
<FormCode
  currentFormBool={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "codeCodeEmail": Object {
        "errorMessage": "",
        "id": "codeCodeEmail",
        "parentId": "codeForm",
        "value": "",
      },
      "codeCodePhone": Object {
        "errorMessage": "",
        "id": "codeCodePhone",
        "parentId": "codeForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerCode shallow renders correctly and calls handleInputChange, with invalid phone verification code 1`] = `
<FormCode
  currentFormBool={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "codeCodeEmail": Object {
        "errorMessage": "",
        "id": "codeCodeEmail",
        "parentId": "codeForm",
        "value": "",
      },
      "codeCodePhone": Object {
        "errorMessage": "Please verify you have entered the correct verification code or request a new code.",
        "id": "codeCodePhone",
        "parentId": "codeForm",
        "value": "1234",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerCode shallow renders correctly and calls handleInputChange, with no phone code 1`] = `
<FormCode
  currentFormBool={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "codeCodeEmail": Object {
        "errorMessage": "",
        "id": "codeCodeEmail",
        "parentId": "codeForm",
        "value": "",
      },
      "codeCodePhone": Object {
        "errorMessage": "Please enter the verification code sent to your mobile phone.",
        "id": "codeCodePhone",
        "parentId": "codeForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerCode shallow renders correctly and calls handleInputChange, with undefined error 1`] = `
<FormCode
  currentFormBool={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "codeCodeEmail": Object {
        "errorMessage": "",
        "id": "codeCodeEmail",
        "parentId": "codeForm",
        "value": "",
      },
      "codeCodePhone": Object {
        "errorMessage": "Please try your request again. If unsuccessful on subsequent attempts, please contact customer service.",
        "id": "codeCodePhone",
        "parentId": "codeForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerCode shallow renders correctly, with componentWillUpdate, componentDidUpdate, and componentWillUnmount 1`] = `
<FormCode
  currentFormBool={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "codeCodeEmail": Object {
        "errorMessage": "",
        "id": "codeCodeEmail",
        "parentId": "codeForm",
        "value": "",
      },
      "codeCodePhone": Object {
        "errorMessage": "",
        "id": "codeCodePhone",
        "parentId": "codeForm",
        "value": "123456",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerCode shallow renders correctly, with loading indicator 1`] = `
<FlexColumn
  alignItems={null}
  alignSelf={null}
  borderColorType="border"
  borderRadius={null}
  borderStyle={null}
  borderWidth={null}
  boxSizing={null}
  color={Object {}}
  display={null}
  flex={null}
  flexWrap={null}
  height="0px"
  justifyContent={null}
  margin={null}
  mediaWidth={null}
  minHeight={null}
  minWidth={null}
  overflowX={null}
  overflowY={null}
  padding={null}
  position={null}
  responsiveAlignSecurities={null}
  responsiveJustifyContent={null}
  responsiveMargin={null}
  responsivePadding={null}
  responsivePosition={null}
  responsiveWidth={null}
  separator={false}
  themeColor="primary"
  width="100%"
>
  <BeatLoader
    color="#7367e6"
    loading={true}
    margin="2px"
    size="15px"
  />
</FlexColumn>
`;
